--- a/ha/tssp_ha.tex
+++ b/ha/tssp_ha.tex
@@ -386,8 +386,10 @@ Deadline: \textbf{2022-12-18, 21:00}.
     \item Is this process $MA(\infty)$ process with respect to \textit{some} white noise, not necessary $(u_t)$?
   \end{enumerate}
   
+
 \end{enumerate}
 
+Deadline: \textbf{2023-02-12, 21:00}. 
 
 
 \newpage
@@ -427,6 +429,65 @@ Deadline: \textbf{2022-12-18, 21:00}.
     \item Is $(y_t)$ a white noise?
   \end{enumerate}
 \end{enumerate}
+
+Deadline: \textbf{2023-02-19, 21:00}. 
+
+\end{document}
+
+\newpage
+
+\section*{Home Assignment 6: prediction, estimation}
+\begin{enumerate}
+  \item Consider $AR(1)$
+
+
+  \item Masha has five observations: $y_1 = 5$, $y_2 = 4$, $y_3 = 7$, $y_4 = 9$, $y_5 = 8$.
+  
+  Masha assumes the model $y_t = \mu + u_t$, $u_t \sim \cN(0;\sigma^2)$ and independent. 
+  Estimate the parameters of Masha's model using unconditional maximum likelihood, 
+    \[
+      \ln f(y_1, \ldots, y_5) \to \max.
+    \]
+
+    \item Sasha has five observations: $y_1 = 5$, $y_2 = 4$, $y_3 = 7$, $y_4 = 9$, $y_5 = 8$.
+
+  Sasha assumes the model $y_t = \mu + y_{t-1} + u_t$, $u_t \sim \cN(0;\sigma^2)$ and independent. 
+
+  Estimate the parameters of Sasha's model using conditional maximum likelihood, 
+    \[
+      \ln f(y_2, \ldots, y_5 \mid y_1) \to \max.
+    \]
+
+
+
+  \item Consider two equations (A) $y_t = 4 + 0.6 y_{y-1} + 0.2y_{t-2} + u_t$ and (B) $y_t = 3 + y_{t-1} + 6y_{t-2} + u_t$.
+  
+  \begin{enumerate}
+    \item How many non-stationary solutions does each equation have?
+    \item How many stationary solutions does each equation have?
+    \item How many stationary solutions that are $MA(\infty)$ with respect to $(u_t)$ does each equation have?
+  \end{enumerate}
+
+  \item For $MA(2)$ process $y_t = 5 + u_t + 3u_{t-2}$ find all values of the autocorrelation function $\rho_k$ and 
+  first two values of the partial autocorrelation function $\phi_{kk}$.
+
+  \item For stationary $AR(1)$ process with equation $y_t = 5 + 0.3y_{t-1} + u_t$ find all values of the autocorrelation function $\rho_k$ and 
+  all values of the partial autocorrelation function $\phi_{kk}$.
+
+  \item For stationary $AR(2)$ process with equation $y_t = 5 + 0.3y_{t-1} - 0.02 y_{t-2} + u_t$ find first two values of the autocorrelation function $\rho_k$ and 
+  all values of the partial autocorrelation function $\phi_{kk}$.
+
+  \item (bonus) Consider the process 
+  \[
+  y_t = \frac{1-0.7F}{1-0.7L} u_t,
+  \]
+  where $(u_t)$ is a white noise and $F$ is the forward operator. 
+  \begin{enumerate}
+    \item Write explicit expression for $(y_t)$ without lag nor forward operator.
+    \item Is $(y_t)$ a white noise?
+  \end{enumerate}
+\end{enumerate}
+
 
 \end{document}
 
@@ -803,22 +864,6 @@ And your have three more honey days :) Stay safe, be happy!
   \item $c_t = 3 + t y_t$.
   \end{enumerate}
 
-  \item Sasha and Masha have five observations: $y_1 = 5$, $y_2 = 4$, $y_3 = 7$, $y_4 = 9$, $y_5 = 8$.
-  
-  Masha assumes the model $y_t = \mu + u_t$, $u_t \sim \cN(0;\sigma^2)$ and independent. 
-
-  Sasha assumes the model $y_t = \mu + y_{t-1} + u_t$, $u_t \sim \cN(0;\sigma^2)$ and independent. 
-
-  \begin{enumerate}
-    \item Estimate the parameters of Masha's model using unconditional maximum likelihood, 
-    \[
-      \ln f(y_1, \ldots, y_5) \to \max.
-    \]
-    \item Estimate the parameters of Sasha's model using conditional maximum likelihood, 
-    \[
-      \ln f(y_2, \ldots, y_5 \mid y_1) \to \max.
-    \]
-  \end{enumerate}
 
   \item Let $(y_t)$ be a stationary process with autocovariance function $\gamma_k = 20 \cdot 0.5^k$ and expected value $100$. 
   You remove all odd observations and hence your have a new process $z_t = y_{2t}$. 
