fix typo in index

--- a/ha/tssp_ha.tex
+++ b/ha/tssp_ha.tex
@@ -402,7 +402,7 @@ Deadline: \textbf{2023-02-12, 21:00}.
     \item Find one stationary solution. Does this solution have $MA(\infty)$ form with respect to $(u_t)$?
   \end{enumerate}
 
-  \item Consider two equations (A) $y_t = 4 + 0.6 y_{y-1} + 0.2y_{t-2} + u_t$ and (B) $y_t = 3 + y_{t-1} + 6y_{t-2} + u_t$.
+  \item Consider two equations (A) $y_t = 4 + 0.6 y_{t-1} + 0.2y_{t-2} + u_t$ and (B) $y_t = 3 + y_{t-1} + 6y_{t-2} + u_t$.
   
   \begin{enumerate}
     \item How many non-stationary solutions does each equation have?
